--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -33,7 +33,7 @@
     </div>
     <div style="margin-top: 30px; text-align: center;">
       <div class="contact-info">
-        <img src="/static/contactimg.png" style="width: 200px; margin-bottom: 20px;" alt="Contact Us">
+        <img src="/static/contactus.png" style="width: 200px; margin-bottom: 20px;" alt="Contact Us">
         <p><strong>Customer Service:</strong> support@bestcars.com</p>
         <p><strong>Phone:</strong> +1 800 123 4567</p>
         <p><strong>Address:</strong> 123 Car Avenue, Detroit, Michigan, USA</p>
